--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "celebrate": "^13.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-winston": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "winston": "^3.3.3"
   }
 }
