--- a/around-back-end/package.json
+++ b/around-back-end/package.json
@@ -32,7 +32,9 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "express-winston": "^4.0.5",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "validator": "^13.1.17",
